Fixing text-alignment on Safari.

--- a/style.css
+++ b/style.css
@@ -62,9 +62,7 @@ html {
 	letter-spacing: 0.1em;
 }
 
-.dark-theme .square.txt:hover,
-.dark-theme .square.txt:active,
-.dark-theme .square.txt:focus {
+.dark-theme .square.txt:hover {
 	font-weight: 400;
 	font-size: 4.3em;
 	letter-spacing: normal;
@@ -271,6 +269,7 @@ a {
 	transition: font-size 150ms;
 	max-width: 6em;
 	max-height: 6em;
+	text-align: center;
 }
 
 /* .square {
@@ -317,7 +316,8 @@ _:future,
 	border: 1px solid var(--choice-hover-border);
 }
 
-.square:hover {
+.square:hover,
+.square:active {
 	transition: all 150ms;
 	font-size: 4.3em;
 }
